--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -516,6 +516,8 @@ Login
 ========== */
 
 #login {
+  position: absolute;
+  height: 100%;
   .aws-btn {
     margin-right: 10px;
   }
@@ -1194,6 +1196,24 @@ skills
   background-color: #4b4b4b;
   background-blend-mode: overlay;
   min-height: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+  .skills-and-languages-block {
+    min-width: 250px;
+    margin-left: 100px;
+  }
+  .jobs-block {
+    min-width: 250px;
+    margin-left: 75px;
+  }
+  .specialities-block {
+    min-width: 350px;
+    margin-left: 75px;
+  }
   .fa {
     text-shadow: 1px 1px 1px black;
   }
@@ -1399,10 +1419,17 @@ Contact
   background-blend-mode: overlay;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
+  .container {
+    margin-left: 125px;
+  }
   .contact-form-container {
     h3 {
       text-align: center;
       font-size: 20px;
+    }
+    h2 {
+      padding: 10px 0 0 0;
+      margin-top: 0;
     }
   }
   .contact-form-container,
@@ -1630,6 +1657,36 @@ Footer
   top: 0;
 }
 
+.right {
+  float: right;
+}
+
+/* ==========
+404 Free Username
+========== */
+
+#username_404 {
+  max-width: 100%;
+  min-height: 100%;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  .container-404 {
+    background-color: rgba(1, 1, 1, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 0 5px #555;
+    -webkit-box-shadow: 0 0 5px #555;
+    font-size: 2rem;
+    padding: 0 1em;
+    a {
+      color: #caa669;
+    }
+    .container-404-hr {
+      background-color: #caa669;
+      height: 1px;
+    }
+  }
+}
+
 /* ==========
  Responsive
 ========== */
@@ -1718,32 +1775,37 @@ Footer
   }
 }
 
-.right {
-  float: right;
+@media (min-width: 992px) {
+  #home {
+    .col-md-12 {
+      width: 100%;
+      margin-left: 10%;
+    }
+  }
 }
 
-/* ==========
-404 Free Username
-========== */
-
-#username_404 {
-  max-width: 100%;
-  min-height: 100%;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  .container-404 {
-    background-color: rgba(1, 1, 1, 0.9);
-    border-radius: 10px;
-    box-shadow: 0 0 5px #555;
-    -webkit-box-shadow: 0 0 5px #555;
-    font-size: 2rem;
-    padding: 0 1em;
-    a {
-      color: #caa669;
+@media (max-width: 991px) {
+  #profile_edit {
+    .col-md-6,
+    .col-md-3,
+    .col-md-4 {
+      margin: 0 10% 0 16.66666667%;
     }
-    .container-404-hr {
-      background-color: #caa669;
-      height: 1px;
+  }
+  #login {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+  }
+  #register {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    form {
+      width: 100%;
+      .form-group {
+        width: 100%;
+      }
     }
   }
 }
